# LillyLedger

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: appimage.yml  tests.yml  windows-release.yml
data/input/: orders.csv  orders_large.csv  output
gui/: exec_reports_widget.cpp  exec_reports_widget.h  import_export_panel.cpp  import_export_panel.h  main.cpp  mainwindow.cpp  mainwindow.h  order_entry_widget.cpp  order_entry_widget.h  orderbook_widget.cpp  orderbook_widget.h  performance_dashboard.cpp  performance_dashboard.h  qt_metatypes.h
gui/ui/: exec_reports_widget.ui  import_export_panel.ui  mainwindow.ui  order_entry_widget.ui  orderbook_widget.ui  performance_dashboard.ui
include/core/: executionreport.h  order.h
include/core/enum/: instrument.h  side.h  status.h
include/engine/: bookentry.h  executionhandler.h  matchingengine.h  orderbook.h  orderrouter.h
include/gui/: exec_reports_widget.h  import_export_panel.h  mainwindow.h  order_entry_widget.h  orderbook_widget.h  performance_dashboard.h
include/io/: csvreader.h  csvwriter.h
include/utils/: timestamp.h
installer/windows/: LillyLedger.iss
resources/: lillyledger.desktop
src/: main.cpp
src/engine/: executionhandler.cpp  matchingengine.cpp  orderbook.cpp  orderrouter.cpp
src/io/: csvreader.cpp  csvwriter.cpp
src/utils/: timestamp.cpp
tests/: CMakeLists.txt
tests/integration/: test_pipeline.cpp
tests/unit/: test_csvreader.cpp  test_csvwriter.cpp  test_executionhandler.cpp  test_matchingengine.cpp  test_orderbook.cpp  test_orderrouter.cpp
